--- a/res/settings.yml
+++ b/res/settings.yml
@@ -1,8 +1,9 @@
+args:
+  - { name: sens, value: "0.125" }
 hits:
   - 30
 stable:
   - { pixel: 3, delay: 28 }
-  - { pixel: 4, delay: 30 }
 keys:
   - { code: SCRCPY_FIRE, point: { x: 416, y: 86 }, comment: "开火键" }
   - { code: SCRCPY_VISION_TOPLEFT, point: { x: 650, y: 100 }, comment: "视野滑动事件左上坐标" }
