--- a/res/settings-oneplus5.yml
+++ b/res/settings-oneplus5.yml
@@ -1,3 +1,9 @@
+args:
+  - { name: sens, value: "0.125" }
+hits:
+  - 30
+stable:
+  - { pixel: 3, delay: 28 }
 keys:
   - { code: SCRCPY_FIRE, point: { x: 288, y: 79 }, comment: "开火键" }
   - { code: SCRCPY_VISION_TOPLEFT, point: { x: 565, y: 96 }, comment: "视野滑动事件左上坐标" }
